Add more las/laz attributes
Note: attributes not yet connected to report generation

--- a/plugin_ui/report_form.ui
+++ b/plugin_ui/report_form.ui
@@ -117,6 +117,19 @@
                 </widget>
             </item>
             <item>
+                <widget class="QLabel" name="labelWarning">
+                    <property name="text">
+                        <string>No information selected</string>
+                    </property>
+                    <property name="styleSheet">
+                        <string>color: red;</string>
+                    </property>
+                    <property name="minimumHeight">
+                        <number>15</number>
+                    </property>
+                </widget>
+            </item>
+            <item>
                 <widget class="QDialogButtonBox" name="buttonBox">
                     <property name="orientation">
                         <enum>Qt::Horizontal</enum>
