--- a/plugin_ui/outlier_removal_form.ui
+++ b/plugin_ui/outlier_removal_form.ui
@@ -6,8 +6,9 @@
             <string>Outlier Removal Settings</string>
         </property>
         <layout class="QVBoxLayout" name="verticalLayout">
+
             <item>
-                <widget class="QFormLayout" name="formLayout">
+                <layout class="QFormLayout" name="formLayout">
                     <property name="fieldGrowthPolicy">
                         <enum>QFormLayout::ExpandingFieldsGrow</enum>
                     </property>
@@ -57,8 +58,9 @@
                             </property>
                         </widget>
                     </item>
-                </widget>
+                </layout>
             </item>
+
             <item>
                 <widget class="QDialogButtonBox" name="buttonBox">
                     <property name="standardButtons">
@@ -66,6 +68,7 @@
                     </property>
                 </widget>
             </item>
+
         </layout>
     </widget>
     <resources/>
